feat: adds orm migration and search guests
